Fix flex-wrap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,7 +93,7 @@ body {
   flex-direction: column;
   gap:150px;
   display:flex;
-  flex-wrap: wrap;
+ 
 
 }
 
